Clase 10/10.1/manifiestos_api/Gateway/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rust-api-route
spec:
  parentRefs:
    - name: rust-api-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /health
      backendRefs:
        - name: rust-api-service
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /api/messages
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /messages
      backendRefs:
        - name: rust-api-service
          port: 80
